syntax = "proto3";

package messari.synthetix.v1;

message Timestamp {
  uint64 block_number = 1;
  uint64 timestamp = 2;
}

message BigInt {
  string val = 1;
}

message TokenBalance {
  string token = 1;
  string holder = 2;
  BigInt balance = 3; 

  Timestamp timestamp = 4;
}

message TokenBalances {
  repeated TokenBalance balances = 1;
}


 
message EscrowReward {
  string balance_type = 1;
  string escrow_contract_version = 2;
  BigInt balance = 3;
  string holder = 4;

  Timestamp timestamp = 5;
}

message EscrowRewards {
  repeated EscrowReward rewards = 1;
}

message ParquetOut {
  oneof synthetix {
    TokenBalance balance = 1;
    EscrowReward escrow_reward = 2;
  }
}

message ParquetOuts {
  repeated ParquetOut outs = 1;
}